# aerial_autonomy

./: .clang-format  .dependencies.rosinstall  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  code.css  index.html  package.xml  plugin.xml  setup.py
cfg/: Gains.cfg  VelocityBasedPositionControllerDynamic.cfg
cmake/: FindTinyXML.cmake  add_event_function.cmake
code_coverage_info/: generate_code_coverage.bash
docs/html/: README_8md.html  ____init_____8py.html  aerial__autonomy__gui_8py.html  aerial__autonomy__node_8cpp.html  aerial__autonomy__node_8cpp__incl.map  aerial__autonomy__node_8cpp__incl.md5  alvar__tracker_8cpp.html  alvar__tracker_8cpp__incl.map  alvar__tracker_8cpp__incl.md5  alvar__tracker_8h.html  alvar__tracker_8h__dep__incl.map  alvar__tracker_8h__dep__incl.md5  alvar__tracker_8h__incl.map  alvar__tracker_8h__incl.md5  alvar__tracker_8h_source.html  annotated.html  arm__functors_8h.html  arm__functors_8h__dep__incl.map  arm__functors_8h__dep__incl.md5  arm__functors_8h__incl.map  (+1541 more)
doxygen/: custom_footer.html
events/: arm_events  basic_events  joystick_control_events  manual_velocity_control_events  mpc_events  orange_picking_events  orange_tracking_events  pick_place_events  sensor_place_events  uav_arm_sysid_events  uav_basic_events  visual_servoing_events
launch/: aerial_autonomy_perspective.perspective  data_bagging.launch  joystick_control_simulator.launch  m200_orange_tracking.launch  manual_rpyt_joy_matrice.launch  manual_rpyt_joy_simulator.launch  matrice.launch  matrice_orange_picking.launch  matrice_orange_tracking.launch  matrice_pick_place.launch  matrice_pick_place_alvar.launch  matrice_pick_place_alvar_t265.launch  matrice_pick_place_roi.launch  matrice_rpyt_controller_test.launch  matrice_sensor_place_alvar.launch  matrice_sensor_place_duo.launch  matrice_sensor_place_guidance.launch  matrice_sensor_place_realsense.launch  matrice_sim.launch  matrice_vins_solo.launch  matrice_visual_servoing.launch  matrice_visual_servoing_KLT.launch  matrice_visual_servoing_alvar.launch  matrice_visual_servoing_roi.launch  mpc_control_tuner.launch  mpc_matrice_arm_simulator.launch  mpc_matrice_simple_arm.launch  mpc_simulator.launch  orange_flat.launch  perceptin_joystick_control_simulator.launch  pick_place_simulator.launch  qrotor_backstepping_controller_tuner.launch  quad_mpc_control_tuner.launch  remote.launch  remote_rqt_aerial_autonomy.launch  rs_d435i.launch  s1000.launch  simulator.launch  simulator_rqt_aerial_autonomy.launch  tf_pick_place.launch  (+4 more)
logs/: README.md
markdown/: background.md  creating_autonomy_application.md  creating_state_machine.md
markdown_scripts/: background.md  class_groups.md
msg/: VelocityYaw.msg
param/: arm_sine_reference_config.pbtxt  base_state_machine_config.pbtxt  joystick_guidance_test_config.pbtxt  joystick_simulator_config.pbtxt  log_config.pbtxt  log_config.pbtxt.in  m200_hil_orange_tracking_config.pbtxt  m200_orange_tracking_config.pbtxt  matrice_adaptive_config.pbtxt  matrice_airm_mpc_config.pbtxt  matrice_airm_mpc_simulator_config.pbtxt  matrice_airm_mpc_simulator_state_machine_config.pbtxt  matrice_config.pbtxt  matrice_hil_adaptive_config.pbtxt  matrice_hil_orange_picking_config.pbtxt  matrice_hil_orange_tracking_config.pbtxt  matrice_hil_pick_place_alvar_config.pbtxt  matrice_hil_pick_place_alvar_pointgrey_config.pbtxt  matrice_hil_pick_place_alvar_pointgrey_t265_config.pbtxt  matrice_hil_sensor_place_alvar_pointgrey_config.pbtxt  matrice_hil_uav_arm_sysid_config.pbtxt  matrice_hil_uav_sysid_config.pbtxt  matrice_orange_picking_config.pbtxt  matrice_orange_tracking_config.pbtxt  matrice_pick_place_alvar_config.pbtxt  matrice_pick_place_alvar_pointgrey_config.pbtxt  matrice_pick_place_alvar_pointgrey_t265_config.pbtxt  matrice_pick_place_config.pbtxt  matrice_pick_place_roi_config.pbtxt  matrice_sensor_place_alvar_pointgrey_config.pbtxt  matrice_sensor_place_duo_config.pbtxt  matrice_sensor_place_guidance_config.pbtxt  matrice_sensor_place_realsense_config.pbtxt  matrice_uav_arm_sysid_config.pbtxt  matrice_uav_sysid_config.pbtxt  matrice_visual_servoing_config.pbtxt  matrice_visual_servoing_config_hil_pointgrey.pbtxt  matrice_visual_servoing_config_pointgrey.pbtxt  minimum_snap_reference_trajectory_config.pbtxt  mocap_log_config.pbtxt  (+20 more)
proto/: acado_config.proto  acceleration_bias_estimator_config.proto  airm_mpc_controller_config.proto  ar_marker_direction_estimator_config.proto  arm_sine_controller_config.proto  arm_system_config.proto  base_state_machine_config.proto  common_system_handler_config.proto  constant_heading_depth_controller_config.proto  data_stream_config.proto  ddp_mpc_controller_config.proto  following_waypoint_sequence_config.proto  geofence_config.proto  grip_config.proto  joystick_velocity_controller_config.proto  joystick_velocity_controller_drone_connector_config.proto  log_config.proto  manual_rpyt_controller_config.proto  manual_velocity_controller_config.proto  manual_velocity_controller_drone_connector_config.proto  minimum_snap_reference_trajectory_config.proto  mpc_connector_config.proto  mpc_higher_level_controller_config.proto  mpc_state_machine_config.proto  mpc_visualizer_config.proto  multiple_spherical_obstacles.proto  obstacle_config.proto  obstacle_cost_config.proto  odom_from_pose_sensor_config.proto  odom_sensor_config.proto  onboard_system_handler_config.proto  orange_tracking_state_machine_config.proto  particle_reference_config.proto  path_sensor_config.proto  pick_place_state_machine_config.proto  place_group.proto  polynomial_reference_config.proto  pose_controller_config.proto  position.proto  position_controller_config.proto  (+36 more)
rviz/: quad_sim.rviz
scripts/: applydocs.bash  clang_format_file.bash  generate_documentation_coverage.bash  generate_dot_files.py.in  generate_event_file.py  generate_test_coverage.bash.in  rqt_aerial_autonomy_gui  rqt_aerial_autonomy_gui.py  test_coverage.py
setup/: generate_test_coverage.bash.in  setup.sh
src/: aerial_autonomy_node.cpp
tests/: onboard_system_handler_tests.cpp  onboard_system_handler_tests.test
(+1366 files in other folders)
